standalone: Ensure scrollbar works.

--- a/media/editor/util.css
+++ b/media/editor/util.css
@@ -1,11 +1,3 @@
-.scrollbar {
-	position: absolute;
-	visibility: hidden;
-	overflow: scroll;
-	width: 100px;
-	height: 100px;
-}
-
 /* Decorators */
 
 .diff-insert {
